# Popiart

./: README.md  index.json
skills/popiskill-audio-avatar-omnishuman-v1/: SKILL.md  _meta.json
skills/popiskill-audio-dubbing-video-localization-v1/: SKILL.md  _meta.json  description_ar.txt  description_cn.txt  description_de.txt  description_en.txt  description_es.txt  description_fr.txt  description_it.txt  description_ja.txt  description_ko.txt  description_ru.txt  description_tw.txt
skills/popiskill-audio-dubbing-video-translation-v1/: SKILL.md  _meta.json
skills/popiskill-audio-editing-postproduction-v1/: SKILL.md  _meta.json
skills/popiskill-audio-pipeline-youtube-shorts-v1/: .gitignore  CHANGELOG.md  README.md  SKILL.md  _meta.json  pyproject.toml  requirements.txt
skills/popiskill-audio-pipeline-youtube-shorts-v1/pipeline/: __init__.py  __main__.py  assemble.py  broll.py  captions.py  config.py  draft.py  log.py  music.py  research.py  retry.py  state.py  thumbnail.py  upload.py  voiceover.py
skills/popiskill-audio-pipeline-youtube-shorts-v1/pipeline/topics/: __init__.py  base.py  engine.py  google_trends.py  manual.py  reddit.py  rss.py  tiktok.py  twitter.py
skills/popiskill-audio-pipeline-youtube-shorts-v1/references/: setup.md  troubleshooting.md
skills/popiskill-audio-pipeline-youtube-shorts-v1/scripts/: setup_youtube_oauth.py
skills/popiskill-audio-pipeline-youtube-shorts-v1/tests/: conftest.py  test_assemble.py  test_captions.py  test_config.py  test_draft.py  test_music.py  test_research.py  test_retry.py  test_state.py  test_topics.py
(+216 files in other folders)
